Added transform stage

--- a/config.properties
+++ b/config.properties
@@ -6,11 +6,11 @@ app.version=1.0.0
 source.url=https://www.osc.org.bo/index.php/es/?option=com_content&view=article&id=50&ID=
 id.last=4625
 
-stage.extract=true
+stage.extract=false
 stage.extract.filename=earthquakes_bolivia_stage_extract.csv
 
 stage.transform=true
-stage.extract.transform=earthquakes_bolivia_stage_transform.csv
+stage.transform.filename=earthquakes_bolivia_stage_transform.csv
 
 stage.load=true
-stage.extract.load=earthquakes_bolivia_stage_load.csv
+stage.load.filename=earthquakes_bolivia_stage_load.csv
