--- a/config.properties
+++ b/config.properties
@@ -4,9 +4,9 @@ app.name=etl_earthquake
 app.version=1.0.0
 
 source.url=https://www.osc.org.bo/index.php/es/?option=com_content&view=article&id=50&ID=
-id.last=4625
+id.last=4648
 
-stage.extract=false
+stage.extract=true
 stage.extract.filename=earthquakes_bolivia_stage_extract.csv
 
 stage.transform=true
