Added POSQL connector

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version> <!-- Use the latest version -->
+        </dependency>
     </dependencies>
 
     <build>
