--- a/config.properties
+++ b/config.properties
@@ -4,7 +4,7 @@ app.name=etl_earthquake
 app.version=1.0.0
 
 source.url=https://www.osc.org.bo/index.php/es/?option=com_content&view=article&id=50&ID=
-id.last=4648
+id.last=4669
 
 stage.extract=false
 stage.extract.filename=earthquakes_bolivia_stage_extract.csv
@@ -14,3 +14,6 @@ stage.transform.filename=earthquakes_bolivia_stage_transform.csv
 
 stage.load=true
 stage.load.filename=earthquakes_bolivia_stage_load.csv
+
+stage.load.geo=true
+stage.load.geo.filename=earthquakes_bolivia.geojson
