--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,19 @@
             <artifactId>dotenv-java</artifactId>
             <version>2.3.2</version>
         </dependency>
-        
+
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20250107</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.3</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
